--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "babel-plugin-transform-class-properties": "^6.16.0",
     "date-input-polyfill": "^2.11.5",
     "jwt-decode": "^2.1.0",
+    "lodash": "^4.17.4",
     "lodash.defaultsdeep": "^4.3.5",
     "moment": "^2.16.0",
     "react": "^15.3.2",
